# XBraidPoroelasticity

./: CMakeLists.txt
src/: biot_braid_displacement_norm.h  biot_error_data.h  braid_biot_control.h  braid_biot_estimator.h  braid_biot_precomputed.h  braid_heat_check.h  xbraidporoelasticity_plugin.cpp
